Expand functionality of `PickaxeCommand`: added support for admin subcommands (`copy`, `repair`, `reset`), improved suggestions logic, and enhanced permission checks.